[package]
name = "ws2812-pio"
version = "0.8.0"
edition = "2021"
license = "Apache-2.0"
description = "Driver implementation for the WS2812 smart LED using the RP2040's PIO peripheral."
documentation = "https://docs.rs/ws2812-pio"
repository = "https://github.com/rp-rs/ws2812-pio-rs/"

[dependencies]
embedded-hal = "1.0.0"
fugit = "0.3.5"
rp2040-hal = "0.10"
pio = "0.2.0"
smart-leds-trait = "0.3.0"
nb = "1.0.0"
cortex-m = "0.7.3"

[dev-dependencies]
static_assertions = "1.1.0"
embedded_hal_0_2 = { package = "embedded-hal", version = "^0.2" }
